deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tomcat
  namespace: dynamic
  labels:
    app:  tomcat
spec:
  selector:
    matchLabels:
      app: tomcat
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  tomcat
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  tomcat
        image:  201734534261.dkr.ecr.eu-west-2.amazonaws.com/ecr-sai:1
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
