svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: dynamic
spec:
  selector:
    app: tomcat
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: tomcat
    protocol: TCP
    port: 80
    targetPort: 8080
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    nodePort:
